--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-		"dev": "vite dev --port 3000",
-		"build": "vite build",
-		"preview": "vite preview",
-		"lint": "prettier --check . && eslint .",
-		"format": "prettier --write ."
+    "dev": "vite dev --port 3000",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write ."
   },
   "devDependencies": {
+    "@sveltejs/adapter-auto": "next",
     "@sveltejs/adapter-netlify": "^1.0.0-next.64",
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
+    "@sveltejs/kit": "next",
     "autoprefixer": "10.4.7",
     "cssnano": "5.1.10",
     "eslint": "8.16.0",
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^1.35.6",
+    "@tweenjs/tween.js": "^18.6.4",
     "tailwindcss": "^3.1.3",
     "three": "^0.141.0"
   }
