--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^20.0.3",
+    "gsap": "^3.11.5",
     "tailwindcss": "^3.1.3",
     "three": "^0.141.0"
   }
