--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "aufbau-web-studio",
   "version": "0.0.1",
   "type": "module",
+  "license": "MIT",
   "scripts": {
     "dev": "vite dev --port 3000",
     "build": "vite build",
@@ -10,11 +11,8 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "next",
-		"@sveltejs/adapter-vercel": "^3.1.0",
-    "@sveltejs/kit": "next",
-    "autoprefixer": "10.4.7",
-    "cssnano": "5.1.10",
+    "@sveltejs/adapter-vercel": "^3.1.0",
+    "@sveltejs/kit": "^1.30.3",
     "eslint": "8.16.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-svelte3": "4.0.0",
@@ -22,7 +20,8 @@
     "postcss-load-config": "3.1.4",
     "svelte": "3.48.0",
     "svelte-preprocess": "4.10.6",
-    "vite": "^3.1.0"
+    "vite": "^4.5.1",
+    "vitest": "^0.25.8"
   },
   "dependencies": {
     "tailwindcss": "^3.1.3",
