--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   "devDependencies": {
     "@sveltejs/adapter-vercel": "^3.1.0",
     "@sveltejs/kit": "^1.30.3",
-    "eslint": "8.16.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-svelte3": "4.0.0",
+		"eslint": "^8.55.0",
+		"eslint-config-prettier": "^8.10.0",
+		"eslint-plugin-svelte": "^2.35.1",
     "postcss": "8.4.14",
     "postcss-load-config": "3.1.4",
-    "svelte": "3.48.0",
+		"svelte": "^3.59.2",
     "svelte-preprocess": "4.10.6",
     "vite": "^4.5.1",
     "vitest": "^0.25.8"
