--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 		"eslint": "^8.55.0",
 		"eslint-config-prettier": "^8.10.0",
 		"eslint-plugin-svelte": "^2.35.1",
+    "prettier": "^2.8.8",
+		"prettier-plugin-svelte": "^2.10.1",
     "postcss": "8.4.14",
     "postcss-load-config": "3.1.4",
 		"svelte": "^3.59.2",
